migrate to jdk 11